[gd_scene load_steps=10 format=3 uid="uid://741vrk1hetwo"]

[ext_resource type="Theme" uid="uid://dde7m6q5cfe1u" path="res://assets/themes/main_theme.tres" id="1_ajqyn"]
[ext_resource type="Script" path="res://scripts/menu_bar/help.gd" id="2_5jdoa"]
[ext_resource type="Script" path="res://scripts/menu_bar/project.gd" id="2_gnyxg"]
[ext_resource type="PackedScene" uid="uid://c257rq015cepw" path="res://scenes/editor/card_editor/codespace.tscn" id="2_qutdm"]
[ext_resource type="Script" path="res://scripts/editor/tab_changer.gd" id="3_1njq7"]
[ext_resource type="Script" path="res://scripts/menu_bar/run.gd" id="3_op3et"]
[ext_resource type="Script" path="res://scripts/editor/file_managers/pack_file_manger.gd" id="5_s5xbg"]
[ext_resource type="Script" path="res://scripts/editor/file_managers/card_file_manager.gd" id="7_f4tkk"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_b54cx"]

[node name="main" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("1_ajqyn")
metadata/_edit_use_anchors_ = true

[node name="Background" type="ColorRect" parent="."]
z_index = -1
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.266667, 0.266667, 0.266667, 1)

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="MenuBar" type="MenuBar" parent="VBoxContainer"]
layout_mode = 2
theme = ExtResource("1_ajqyn")
flat = true

[node name="Panel" type="Panel" parent="VBoxContainer/MenuBar"]
z_index = -1
z_as_relative = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 1

[node name="Pack" type="PopupMenu" parent="VBoxContainer/MenuBar"]
item_count = 5
item_0/text = "Save"
item_0/id = 1
item_1/text = "Export"
item_1/id = 2
item_2/text = ""
item_2/id = 0
item_2/separator = true
item_3/text = "Quit"
item_3/id = 3
item_4/text = "Quit to project list"
item_4/id = 4
script = ExtResource("2_gnyxg")

[node name="Run" type="PopupMenu" parent="VBoxContainer/MenuBar"]
size = Vector2i(107, 100)
item_count = 3
item_0/text = "Build and run"
item_0/id = 1
item_1/text = "Build"
item_1/id = 2
item_2/text = "Update packages"
item_2/id = 3
script = ExtResource("3_op3et")

[node name="Help" type="PopupMenu" parent="VBoxContainer/MenuBar"]
item_count = 2
item_0/text = "Help forum"
item_0/id = 1
item_1/text = "hc-tcg discord"
item_1/id = 2
script = ExtResource("2_5jdoa")

[node name="MainEditor" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
size_flags_stretch_ratio = 0.5
theme_override_constants/separation = 0

[node name="TabList" type="TabContainer" parent="VBoxContainer/MainEditor"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_stretch_ratio = 0.15
theme = ExtResource("1_ajqyn")
clip_tabs = false
use_hidden_tabs_for_min_size = true

[node name="Pack" type="VBoxContainer" parent="VBoxContainer/MainEditor/TabList" groups=["save"]]
layout_mode = 2
script = ExtResource("5_s5xbg")

[node name="HSeparator" type="HSeparator" parent="VBoxContainer/MainEditor/TabList/Pack"]
layout_mode = 2
theme_override_styles/separator = SubResource("StyleBoxFlat_b54cx")

[node name="Name" type="LineEdit" parent="VBoxContainer/MainEditor/TabList/Pack"]
layout_mode = 2
editable = false

[node name="Icons" type="HBoxContainer" parent="VBoxContainer/MainEditor/TabList/Pack"]
layout_mode = 2

[node name="UploadPack" type="Button" parent="VBoxContainer/MainEditor/TabList/Pack/Icons"]
layout_mode = 2
size_flags_horizontal = 3
text = "Select pack icon"

[node name="IconRect" type="TextureRect" parent="VBoxContainer/MainEditor/TabList/Pack/Icons"]
layout_mode = 2
size_flags_horizontal = 3

[node name="HermitPalette" type="VBoxContainer" parent="VBoxContainer/MainEditor/TabList/Pack"]
layout_mode = 2

[node name="HSeparator2" type="HSeparator" parent="VBoxContainer/MainEditor/TabList/Pack/HermitPalette"]
layout_mode = 2

[node name="Label" type="Label" parent="VBoxContainer/MainEditor/TabList/Pack/HermitPalette"]
layout_mode = 2
text = "Hermit palette"
horizontal_alignment = 1
vertical_alignment = 1

[node name="color_container" type="GridContainer" parent="VBoxContainer/MainEditor/TabList/Pack/HermitPalette"]
layout_mode = 2
columns = 2

[node name="Label" type="Label" parent="VBoxContainer/MainEditor/TabList/Pack/HermitPalette/color_container"]
layout_mode = 2
text = "Background"

[node name="background" type="ColorPickerButton" parent="VBoxContainer/MainEditor/TabList/Pack/HermitPalette/color_container"]
layout_mode = 2
size_flags_horizontal = 3
tooltip_text = "Background"
text = "Background"
edit_alpha = false

[node name="Label2" type="Label" parent="VBoxContainer/MainEditor/TabList/Pack/HermitPalette/color_container"]
layout_mode = 2
text = "Foreground"

[node name="foreground" type="ColorPickerButton" parent="VBoxContainer/MainEditor/TabList/Pack/HermitPalette/color_container"]
layout_mode = 2
tooltip_text = "Foreground"
text = "Foreground"
edit_alpha = false

[node name="Label3" type="Label" parent="VBoxContainer/MainEditor/TabList/Pack/HermitPalette/color_container"]
layout_mode = 2
text = "Text"

[node name="text" type="ColorPickerButton" parent="VBoxContainer/MainEditor/TabList/Pack/HermitPalette/color_container"]
layout_mode = 2
tooltip_text = "Text"
text = "Text"
edit_alpha = false

[node name="Label4" type="Label" parent="VBoxContainer/MainEditor/TabList/Pack/HermitPalette/color_container"]
layout_mode = 2
text = "Normal attack"

[node name="special_attack" type="ColorPickerButton" parent="VBoxContainer/MainEditor/TabList/Pack/HermitPalette/color_container"]
layout_mode = 2
tooltip_text = "Normal attack"
text = "Normal attack"
edit_alpha = false

[node name="Label5" type="Label" parent="VBoxContainer/MainEditor/TabList/Pack/HermitPalette/color_container"]
layout_mode = 2
text = "Special attack"

[node name="normal_attack" type="ColorPickerButton" parent="VBoxContainer/MainEditor/TabList/Pack/HermitPalette/color_container"]
layout_mode = 2
tooltip_text = "Special attack"
text = "Special attack"
edit_alpha = false

[node name="EffectPalette" type="VBoxContainer" parent="VBoxContainer/MainEditor/TabList/Pack"]
layout_mode = 2

[node name="HSeparator2" type="HSeparator" parent="VBoxContainer/MainEditor/TabList/Pack/EffectPalette"]
layout_mode = 2

[node name="Label" type="Label" parent="VBoxContainer/MainEditor/TabList/Pack/EffectPalette"]
layout_mode = 2
text = "Effect palette"
horizontal_alignment = 1
vertical_alignment = 1

[node name="color_container" type="GridContainer" parent="VBoxContainer/MainEditor/TabList/Pack/EffectPalette"]
layout_mode = 2
columns = 2

[node name="Label" type="Label" parent="VBoxContainer/MainEditor/TabList/Pack/EffectPalette/color_container"]
layout_mode = 2
text = "Background"

[node name="background" type="ColorPickerButton" parent="VBoxContainer/MainEditor/TabList/Pack/EffectPalette/color_container"]
layout_mode = 2
size_flags_horizontal = 3
tooltip_text = "Background"
text = "Background"
edit_alpha = false

[node name="Label2" type="Label" parent="VBoxContainer/MainEditor/TabList/Pack/EffectPalette/color_container"]
layout_mode = 2
text = "Foreground"

[node name="foreground" type="ColorPickerButton" parent="VBoxContainer/MainEditor/TabList/Pack/EffectPalette/color_container"]
layout_mode = 2
tooltip_text = "Foreground"
text = "Foreground"
edit_alpha = false

[node name="Label3" type="Label" parent="VBoxContainer/MainEditor/TabList/Pack/EffectPalette/color_container"]
layout_mode = 2
text = "Text"

[node name="text" type="ColorPickerButton" parent="VBoxContainer/MainEditor/TabList/Pack/EffectPalette/color_container"]
layout_mode = 2
tooltip_text = "Text"
text = "Text"
edit_alpha = false

[node name="SingleUsePalette" type="VBoxContainer" parent="VBoxContainer/MainEditor/TabList/Pack"]
layout_mode = 2

[node name="HSeparator2" type="HSeparator" parent="VBoxContainer/MainEditor/TabList/Pack/SingleUsePalette"]
layout_mode = 2

[node name="Label" type="Label" parent="VBoxContainer/MainEditor/TabList/Pack/SingleUsePalette"]
layout_mode = 2
text = "Single use palette"
horizontal_alignment = 1
vertical_alignment = 1

[node name="color_container" type="GridContainer" parent="VBoxContainer/MainEditor/TabList/Pack/SingleUsePalette"]
layout_mode = 2
columns = 2

[node name="Label" type="Label" parent="VBoxContainer/MainEditor/TabList/Pack/SingleUsePalette/color_container"]
layout_mode = 2
text = "Background"

[node name="background" type="ColorPickerButton" parent="VBoxContainer/MainEditor/TabList/Pack/SingleUsePalette/color_container"]
layout_mode = 2
size_flags_horizontal = 3
tooltip_text = "Background"
text = "Background"
edit_alpha = false

[node name="Label2" type="Label" parent="VBoxContainer/MainEditor/TabList/Pack/SingleUsePalette/color_container"]
layout_mode = 2
text = "Foreground"

[node name="foreground" type="ColorPickerButton" parent="VBoxContainer/MainEditor/TabList/Pack/SingleUsePalette/color_container"]
layout_mode = 2
tooltip_text = "Foreground"
text = "Foreground"
edit_alpha = false

[node name="Label3" type="Label" parent="VBoxContainer/MainEditor/TabList/Pack/SingleUsePalette/color_container"]
layout_mode = 2
text = "Text"

[node name="text" type="ColorPickerButton" parent="VBoxContainer/MainEditor/TabList/Pack/SingleUsePalette/color_container"]
layout_mode = 2
tooltip_text = "Text"
text = "Text"
edit_alpha = false

[node name="IconFileDialog" type="FileDialog" parent="VBoxContainer/MainEditor/TabList/Pack"]
title = "Open a File"
size = Vector2i(500, 500)
ok_button_text = "Open"
file_mode = 0
access = 2
filters = PackedStringArray("*.png, *.jpeg, *.jpg; Image")

[node name="Cards" type="VBoxContainer" parent="VBoxContainer/MainEditor/TabList"]
visible = false
layout_mode = 2
script = ExtResource("7_f4tkk")

[node name="Tabs" type="Control" parent="VBoxContainer/MainEditor"]
layout_mode = 2
size_flags_horizontal = 3
script = ExtResource("3_1njq7")

[node name="Pack" type="Control" parent="VBoxContainer/MainEditor/Tabs"]
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="CardEditor" parent="VBoxContainer/MainEditor/Tabs" instance=ExtResource("2_qutdm")]
visible = false
layout_mode = 1

[connection signal="tab_changed" from="VBoxContainer/MainEditor/TabList" to="VBoxContainer/MainEditor/Tabs" method="_tab_changed"]
[connection signal="pressed" from="VBoxContainer/MainEditor/TabList/Pack/Icons/UploadPack" to="VBoxContainer/MainEditor/TabList/Pack" method="_icon_upload_started"]
[connection signal="file_selected" from="VBoxContainer/MainEditor/TabList/Pack/IconFileDialog" to="VBoxContainer/MainEditor/TabList/Pack" method="_icon_chosen"]
